--- a/hci_template/app/views/shared/_categories.html.haml
+++ b/hci_template/app/views/shared/_categories.html.haml
@@ -2,6 +2,6 @@
   %h3
     Categories
   %ul 
-    - ["books", "music", "electronics", "movies"].each do |item|
+    - Category.where(:parent_id => nil).each do |item|
       %li 
-        = link_to item.titleize, "#!/#{item.downcase}"
+        = link_to item.name.titleize, "#!/products/by/category/#{item.name.downcase}"
