--- a/hci_template/app/views/user/registration.html.haml
+++ b/hci_template/app/views/user/registration.html.haml
@@ -4,7 +4,7 @@
       %h3
         Ingreso
       %p 
-        %form.form
+        %form.form{:action => "/", :method => "post"}
           %ul
             %li
               .form_item
