--- a/hci_template/public/stylesheets/default.css
+++ b/hci_template/public/stylesheets/default.css
@@ -267,13 +267,19 @@ h1,h2,h3,h4,h5,h6 {
 }
 
 #categories a {
-	color: ;
+
 }
 
 #categories ul li {
-	margin: 0px;
+	margin: 0;
 	padding: 10px;
 }
+
+#categories ul ul {
+    display:none;
+    margin-left: 10px;
+}
+
 
 /******************* Guide               ******************/ 
 
