breadcrumbs improved, but we should rewrite the plugin in a future...

--- a/hci_template/app/views/layouts/application.html.erb
+++ b/hci_template/app/views/layouts/application.html.erb
@@ -8,7 +8,6 @@
     <link href="/stylesheets/default.css?1316490955" media="screen" rel="stylesheet" type="text/css" />
     <link href="/stylesheets/style.css?1316458914" media="screen" rel="stylesheet" type="text/css" />
 		<link href="/stylesheets/breadcrumb.css" media="screen" rel="stylesheet" type="text/css" />
-		<link href="/stylesheets/cart.css" media="screen" rel="stylesheet" type="text/css" />
     <script src="/javascripts/head.min.js?1316458914" type="text/javascript"></script>
     <meta name="csrf-param" content="authenticity_token"/>
     <meta name="csrf-token" content="u4qUG3FDIo3amt7XMdDEDGVMohfjeCeZRQ4l82/7Cz8="/>
@@ -50,38 +49,13 @@
           <div class='clear'></div>
         </div>
         <div class='container_12' id='guide'>
-					<div class='grid_6'></div>
-					
-          <div class='grid_5' id='navigation'>
-            Navegación #Acá viene la guia de la página. aef
-          </div>
-          <div class='grid_7' id='cart'>
-        <!    Carrito    #Div dropdown re copadin con JS ;)>
-						 <div id="cart_container">
-				          <div id="cart_title">
-				              <span>Shopping Cart</span>
-				              <div class="clear"></div>
-				          </div>
-				          <div id="cart_toolbar">
-				              <div id="cart_items" class="back"></div>
-				          </div>
-				          <div id="navigate">
-				              <div id="nav_left">
-				                  <a href="" id="btn_prev"><</a>
-				                  <a href="" id="btn_next">></a>
-				                  <a href="" id="btn_clear">Clear Cart</a>
-				              </div>
-				              <div id="nav_right">
-				                  <span class="sptext">
-				                      <label>Items </label><label class="count" id="citem">0</label>
-				                  </span>
-				                  <span class="sptext">
-				                      <label>Price </label><label class="count" id="cprice">$ 0</label>
-				                  </span>
-				              </div>
-				              <div class="clear"></div>
-				          </div>
-				      </div>
+          <div id="guide-inner">
+            <div class='grid_6' id='navigation'>
+              
+            </div>
+            <div class='grid_6' id='cart'>
+              Carrito #Div dropdown re copadin con JS ;)
+            </div>
           </div>
         </div>
         <div class='container_12' id='content'>
