--- a/views/product_list.ejs
+++ b/views/product_list.ejs
@@ -6,7 +6,7 @@
     <div class="content">
         <div class="items">
         <% for (var i = 0; i < this.products.length; i++) { %>
-            <%= $.View('/views/product_item.ejs', {product: this.products[i], index: i}) %>
+            <%= $.View('views/product_item.ejs', {product: this.products[i], index: i}) %>
         <% } %>
         </div>
     </div>
