--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -313,5 +313,5 @@ h1,h2,h3,h4,h5,h6 {
 
 .loading {
 	min-height: 500px;
-	background: transparent url('/images/ajax-loader.gif') no-repeat center center;
+	background: transparent url('../images/ajax-loader.gif') no-repeat center center;
 }
