--- a/views/login.ejs
+++ b/views/login.ejs
@@ -1,9 +1,8 @@
- <div class='login-label grid_1'>
-                        Ingreso:
-                    </div>
-                      <form action='/' class='login-form' method='post'>
-                        <input type='text' id='username' value='Usuario' />
-                        <input type='text' id='password' value='Contraseña' />
-                        <input type='password' id='pass' />
-                      </form>
-                    </div>
+<div>
+<form action='/' class='login-form' method='post'>
+    <input type='text' id='username' value='Usuario'/>
+    <input type='text' id='password' value='Contraseña'/>
+    <input type='password' id='pass'/>
+    <input type='button' id='login_submit' value="login"/>
+</form>
+</div>
