--- a/views/product_show.ejs
+++ b/views/product_show.ejs
@@ -1,10 +1,18 @@
 <div class="box product_show" id="product-<%=this.product.id%>">
-    <h3>
+    <h2>
         <%= this.product.name %>
-    </h3>
-    <div class="image"></div>
+    </h2>
+    <img src="<%=this.product.image_url%>" alt=""/>
     <p class="attribute">
-        <span class="label">
+        <span class="sales_rank-label label">
+            Sales rank:
+        </span>
+        <span class="sales_rank">
+            <%= this.product.sales_rank %>
+        </span>
+    </p>
+    <p class="attribute">
+        <span class="price-lable label">
             Price:
         </span>
         <span class="price">
