--- a/views/logged.ejs
+++ b/views/logged.ejs
@@ -1,6 +1,1 @@
-    <div class='welcome grid_4'>
-        Bienvenido <%= this.username %>
-    </div>
-    <div class='logout-link grid_1'>
-        <a href='/logout'>logout</a>
-    </div>
+    <span id='welcome'>Bienvenido <%= this.username %></span> | <span id='sign_out'><a href="/">Sign out</a><span/> | <a href="/languages">English ∆</a>
