--- a/views/book_product_show.ejs
+++ b/views/book_product_show.ejs
@@ -36,11 +36,11 @@
         </span>
     </p>
     <p class="attribute">
-        <span class="publisher_date-label label">
-            Publisher Date:
+        <span class="published_date-label label">
+            Published Date:
         </span>
-        <span class="publisher_date">
-            <%= this.product.publisher_date %>
+        <span class="published_date">
+            <%= this.product.published_date %>
         </span>
     </p>
     <p class="attribute">
