--- a/views/product_item.ejs
+++ b/views/product_item.ejs
@@ -7,8 +7,9 @@
       <a href="#products/show&id=<%=this.product.id%>"><%=this.product.name%></a>
     </h3>
 
-    <img src="<%=this.product.image_url%>" alt=""/>
-
+    <a href="#products/show&id=<%=this.product.id%>">
+      <img src="<%=this.product.image_url%>" alt=""/>
+    </a>
     <p class="attribute">
       <span class="label">
         Rank:
