--- a/views/register.ejs
+++ b/views/register.ejs
@@ -4,23 +4,27 @@
     <form action="/" method="post">
         <div class="form_item">
             <span class="label register-username-label">Username:</span>
-            <input type="text" name="username" class="register-username-label input"/>
+            <input type="text" id="reg-username" name="username" class="register-username-label input"/>
         </div>
         <div class="form_item">
             <span class="label register-name-label">Name:</span>
-            <input type="text" name="name" class="register-name-label input"/>
+            <input type="text" id="reg-name" name="name" class="register-name-label input"/>
         </div>
         <div class="form_item">
             <span class="label register-password-label">Password:</span>
-            <input type="password" name="password" class="register-name-label input"/>
+            <input type="password" id="reg-password" name="password" class="register-name-label input"/>
+        </div>
+        <div class="form_item">
+            <span class="label register-password-label">Password:</span>
+            <input type="password" id="reg-password2" name="password" class="register-name-label input"/>
         </div>
         <div class="form_item">
             <span class="label register-email-label">Email:</span>
-            <input type="text" name="email" class="register-email-label input"/>
+            <input type="text" id="reg-email" name="email" class="register-email-label input"/>
         </div>
         <div class="form_item">
-            <span class="label register-email-label">Birth date:</span>
-            <input type="text" name="email" class="register-email-label input"/>
+            <span class="label register-birth-date-label">Birth date:</span>
+            <input type="text" id="reg-birth-date" name="email" class="register-email-label input"/>
         </div>
         <div class="form_item">
             <input type="button" value="Register" class="register-button-label form_button"/>
