--- a/views/product_list.ejs
+++ b/views/product_list.ejs
@@ -8,7 +8,7 @@
         </div>
         <% } %>
         <div class="filter">
-            <a href="#">Activate Filters</a>
+            <a href="/filters">Activate Filters</a>
         </div>
         <div class="clear"></div>
         <!-- Pagination space -->
