--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -16,6 +16,7 @@
 
 /************  GLOBAL DEFINES **************/
 
+
 *, input {
 	font-family: "Lucida Grande", Lucida, Verdana, sans-serif!important;
 }
@@ -260,6 +261,11 @@ h1,h2,h3,h4,h5,h6 {
     float:left;
 }
 
+.loader {
+    float:left;
+    margin-left:-40px;
+    display:none;
+}
 
 
 .product_list .filter {
@@ -269,6 +275,12 @@ h1,h2,h3,h4,h5,h6 {
 
 .product_item {
     border: 1px solid #eee;
+    background:white;
+
+}
+
+.box-cell {
+    margin: 5px;
 }
 
 .product_item img {
@@ -464,4 +476,54 @@ h1,h2,h3,h4,h5,h6 {
 .loading {
 	min-height: 500px;
 	background: transparent url('../images/ajax-loader.gif') no-repeat center center;
+}
+
+
+/**** Isotope Filtering ****/
+
+.isotope-item {
+  z-index: 2;
+}
+
+.isotope-hidden.isotope-item {
+  pointer-events: none;
+  z-index: 1;
+  display:none;
+  opacity:0;
+  visibility:none;
+}
+
+/**** Isotope CSS3 transitions ****/
+
+.isotope,
+.isotope .isotope-item {
+  -webkit-transition-duration: 0.8s;
+     -moz-transition-duration: 0.8s;
+          transition-duration: 0.8s;
+}
+
+.isotope {
+  -webkit-transition-property: height, width;
+     -moz-transition-property: height, width;
+          transition-property: height, width;
+}
+
+.isotope .isotope-item {
+  -webkit-transition-property: -webkit-transform, opacity;
+     -moz-transition-property:    -moz-transform, opacity;
+          transition-property:         transform, opacity;
+}
+
+/**** disabling Isotope CSS3 transitions ****/
+
+.isotope.no-transition,
+.isotope.no-transition .isotope-item,
+.isotope .isotope-item.no-transition {
+  -webkit-transition-duration: 0s;
+     -moz-transition-duration: 0s;
+          transition-duration: 0s;
+}
+
+.items{
+    min-height:300px;
 }
