--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -434,6 +434,25 @@ h1,h2,h3,h4,h5,h6 {
 
 }
 
+#cart .list li.last  {
+    padding: 10px;
+    background:#eee;
+    font-weight:bold;
+    cursor:pointer;
+}
+
+.cart-animation-box {
+    border: 1px solid #666;
+    z-index:2000;
+}
+
+#cart .list li.last:hover  {
+    padding: 10px;
+    background:#0099F7;
+    color:white;
+    font-weight:bold;
+}
+
 #cart .list li .right button {
     width:100px;
 }
