--- a/views/book_product_show.ejs
+++ b/views/book_product_show.ejs
@@ -67,5 +67,8 @@
             <%= this.product.language %>
         </span>
     </p>
+    <p class="attribute">
+      <a href="#" class="addcart">Add to cart</a>
+    </p>
     <div class="clear"></div>
 </div>
