--- a/views/movie_product_show.ejs
+++ b/views/movie_product_show.ejs
@@ -99,5 +99,8 @@
             <%= this.product.ASIN %>
         </span>
     </p>
+    <p class="attribute">
+      <a href="#" class="addcart">Add to cart</a>
+    </p>
     <div class="clear"></div>
 </div>
