--- a/views/product_item.ejs
+++ b/views/product_item.ejs
@@ -24,7 +24,7 @@
       </span>
     </p>
     <p class="attribute">
-      <a href="#" class="addcart">Add to cart</a> - <a href="#products/show&id=<%=this.product.id%>" class="addcart">More</a>
+      <a href="#" class="addcart">Add to cart</a>
     </p>
     <div class="clear"></div>
   </div>
