--- a/views/product_show.ejs
+++ b/views/product_show.ejs
@@ -19,5 +19,8 @@
             <%= this.product.price %>
         </span>
     </p>
+    <p class="attribute">
+      <a href="#" class="addcart">Add to cart</a> - <a href="#products/show&id=<%=this.product.id%>" class="addcart">More</a>
+    </p>
     <div class="clear"></div>
 </div>
